# BGL

./: CMakeLists.txt  README.md  bgl.pc.in
example/: CMakeLists.txt  clip.c  cube.c  gears.c  obj.c  scene.c  window.c
include/bgl/: bgl.h  bglm.h  bglt.h
src/: CMakeLists.txt  bgl.c  callbacks.c  internal.h  platform.h  time.c  utils.h  window.c
src/pipeline/: index_buffer.c  pipeline.c  uniform.c  vertex_buffer.c  viewport.c
src/posix/: time.c
src/tools/: open_obj.c
src/win32/: init.c  platform.c  platform.h  time.c  window.c
src/win32/render/: base.c  base.h
src/x11/: init.c  platform.h  window.c
src/x11/render/: base.c  base.h
